...
                        }
                        else {
                            LazyVGrid(columns: columns, spacing: 0) {
                                ForEach(Array(viewModel.cards.enumerated()), id: \.offset){ index, card in
                                    CardView(cardViewModel: card, handleCardTap: viewModel.handleCardTap, index: index)
                                }
                            }.accessibilityIdentifier("cardsGrid")
                            .padding()
                        }
                    }
                    .frame(width: geometry.size.width, height: geometry.size.height)
                }
            }
...
