//
//  MatchingPairsUITests.swift
//  MatchingPairsUITests
//
//  Created by Razvan Secure on 01.11.2024.
//

import XCTest

final class MatchingPairsUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    @MainActor
    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }
    
    @MainActor
    func testAppFlow() throws {
        let app = XCUIApplication()
        app.launch()
        
        let slider = app.sliders["numberOfPairsSlider"]
        XCTAssertTrue(slider.exists, "Slider for number of pairs does not exist")
        slider.adjust(toNormalizedSliderPosition: 1)
        XCTAssertTrue(app.staticTexts["Number of pairs: 30"].exists)
        
        let leaderboardButton = app.buttons["Leaderboard"]
        XCTAssertTrue(leaderboardButton.exists, "Leaderboard button does not exist")
        leaderboardButton.tap()
        
        let backButton = app.navigationBars.buttons["Matching Pairs"]
        XCTAssertTrue(backButton.exists, "Back button does not exist")
        backButton.tap()
        
        let playButton = app.buttons["Play"]
        XCTAssertTrue(playButton.exists, "Play button does not exist")
        playButton.tap()
        
        let cardGrid = app.otherElements["cardsGrid"]
        XCTAssertTrue(cardGrid.exists, "CardListView did not load properly")
                
        let firstCard = app.otherElements["card_0"]
        XCTAssertTrue(firstCard.exists, "First card does not exist")
        firstCard.tap()
                
        let secondCard = app.otherElements["card_1"]
        XCTAssertTrue(secondCard.exists, "Second card does not exist")
        secondCard.tap()
        
    }
    
    @MainActor
    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, watchOS 7.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
